@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.130 2005/05/03 08:38:13 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.131 2005/05/03 10:02:27 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -265,6 +265,10 @@ PH/42 Exim no longer gives details of delivery errors for specific addresses in
       as "unrouteable address" or "local delivery error" are given.
 
 PH/43 $value is now also set for the "else" part of a ${run expansion.
+
+PH/44 Applied patch from the Sieve maintainer: "The vacation draft is still
+      being worked on, but at least Exim now implements the latest version to
+      play with."
 
 
 A note about Exim versions 4.44 and 4.50
